--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: feathers
 description: Lightweight flexible app & game engine where you get to feather your application the way you want it, using a node based approach with components that can be customized.
-version: 0.0.1-beta.7
+version: 0.0.2-dev.1
 author: Attict <eric@attict.net>
 homepage: https://github.com/Attict/Feather
 
